--- a/JavaScript OneBit/Modulo4CSS/ex001/index.html
+++ b/JavaScript OneBit/Modulo4CSS/ex001/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../Modulo4CSS/style.css">
+    <link rel="stylesheet" href="../ex001/style.css">
     <title>Document</title>
 </head>
 <body>
